# postbox

./: package-lock.json  package.json  pyproject.toml  serverless.yaml  web_handler.py
postbox/: app.py  config.py  utils.py
postbox/models/: mailbox.py
resources/: dynamodb-table.yaml  s3-bucket.yaml  sns-topic.yaml
